# apps/storefront-api/openapi.json
@@ -1,21 +1,7 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/": {
-      "get": {
-        "operationId": "AppController_getHello",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "App"
-        ]
-      }
-    },
-    "/products": {
+    "/v1/products": {
       "get": {
         "operationId": "ProductsController_findAll",
         "parameters": [
@@ -140,7 +126,7 @@
         ]
       }
     },
-    "/products/{id}": {
+    "/v1/products/{id}": {
       "get": {
         "operationId": "ProductsController_findOne",
         "parameters": [
@@ -178,7 +164,7 @@
         ]
       }
     },
-    "/categories": {
+    "/v1/categories": {
       "get": {
         "operationId": "CategoriesController_findAll",
         "parameters": [
@@ -223,7 +209,7 @@
         ]
       }
     },
-    "/categories/{id}": {
+    "/v1/categories/{id}": {
       "get": {
         "operationId": "CategoriesController_findOne",
         "parameters": [
@@ -359,7 +345,7 @@
         ]
       }
     },
-    "/brands": {
+    "/v1/brands": {
       "get": {
         "operationId": "BrandsController_findAll",
         "parameters": [
@@ -404,7 +390,7 @@
         ]
       }
     },
-    "/brands/{id}": {
+    "/v1/brands/{id}": {
       "get": {
         "operationId": "BrandsController_findOne",
         "parameters": [
@@ -540,7 +526,7 @@
         ]
       }
     },
-    "/cart/items": {
+    "/v1/cart/items": {
       "post": {
         "operationId": "CartController_addItem",
         "parameters": [],
@@ -576,7 +562,7 @@
         ]
       }
     },
-    "/cart": {
+    "/v1/cart": {
       "get": {
         "operationId": "CartController_getCart",
         "parameters": [],
@@ -632,7 +618,7 @@
         ]
       }
     },
-    "/cart/items/{variantId}": {
+    "/v1/cart/items/{variantId}": {
       "patch": {
         "operationId": "CartController_updateItem",
         "parameters": [
@@ -716,7 +702,7 @@
         ]
       }
     },
-    "/checkout/config": {
+    "/v1/checkout/config": {
       "get": {
         "operationId": "CheckoutController_getConfig",
         "parameters": [],
@@ -742,7 +728,7 @@
         ]
       }
     },
-    "/checkout/session": {
+    "/v1/checkout/session": {
       "post": {
         "operationId": "CheckoutController_createSession",
         "parameters": [],
@@ -778,7 +764,7 @@
         ]
       }
     },
-    "/checkout/shipping-options": {
+    "/v1/checkout/shipping-options": {
       "post": {
         "operationId": "CheckoutController_getShippingOptions",
         "parameters": [],
@@ -814,7 +800,7 @@
         ]
       }
     },
-    "/checkout/session/{sessionId}": {
+    "/v1/checkout/session/{sessionId}": {
       "get": {
         "operationId": "CheckoutController_getSessionStatus",
         "parameters": [
@@ -849,7 +835,7 @@
         ]
       }
     },
-    "/customer": {
+    "/v1/customer": {
       "get": {
         "operationId": "CustomerController_findOne",
         "parameters": [],
@@ -911,7 +897,7 @@
         ]
       }
     },
-    "/customer/orders": {
+    "/v1/customer/orders": {
       "get": {
         "operationId": "CustomerOrdersController_findAll",
         "parameters": [
@@ -957,7 +943,7 @@
         ]
       }
     },
-    "/customer/orders/{id}": {
+    "/v1/customer/orders/{id}": {
       "get": {
         "operationId": "CustomerOrdersController_findOne",
         "parameters": [
@@ -996,7 +982,7 @@
         ]
       }
     },
-    "/auth/signup": {
+    "/v1/auth/signup": {
       "post": {
         "operationId": "AuthController_signup",
         "parameters": [],
@@ -1035,7 +1021,7 @@
         ]
       }
     },
-    "/auth/signin": {
+    "/v1/auth/signin": {
       "post": {
         "operationId": "AuthController_signin",
         "parameters": [],
@@ -1074,7 +1060,7 @@
         ]
       }
     },
-    "/auth/token/refresh": {
+    "/v1/auth/token/refresh": {
       "post": {
         "operationId": "AuthController_refreshToken",
         "parameters": [],
@@ -1113,7 +1099,7 @@
         ]
       }
     },
-    "/auth/logout": {
+    "/v1/auth/logout": {
       "post": {
         "operationId": "AuthController_logout",
         "parameters": [],
